# codeck

./: Cargo.toml  LICENSE  README.md
src/: app.rs  client.rs  clipboard.rs  lifecycle.rs  main.rs  markdown.rs  model.rs  selection.rs  terminal_palette.rs  transcript.rs  ui.rs
