[package]
name = "codeck"
version = "0.12.0"
edition = "2024"
description = "A keyboard-first TUI for background Codex sessions"
license = "MIT"

[dependencies]
anyhow = "1.0"
arboard = "3.6.1"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
libc = "0.2"
pulldown-cmark = { version = "0.13", default-features = false }
png = "0.18.1"
ratatui = "0.30.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = "0.28"
unicode-segmentation = "1.12"
unicode-width = "0.2.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
